# viskum-bytecode

./: .gitignore  Cargo.toml  LICENSE  README.md  bunch-of-1s.txt  file.vs  sd.js  snippets.txt
goal/: Counter.vsx
src/: chunk.rs  main.rs  precedence.rs  value.rs  vm.rs
src/chunk/: debug.rs  mod.rs
src/compiler/: core_methods.rs  helper_methods.rs  mod.rs
src/lexer/: helper_methods.rs  mod.rs
src/macros/: debug_macros.rs  mod.rs
src/parse_rule/: mod.rs
src/parser/: mod.rs
src/tests/: basic_math_operations.rs  compares.rs  lexer_tests.rs  math_operations.rs  mod.rs  op_constants.rs  string_interpolation.rs
src/token/: mod.rs  token_type.rs
src/util/: general.rs  mod.rs  print.rs
