[package]
name = "viskum-bytecode"
version = "0.1.0"
edition = "2021"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorize = "0.1.0"
statrs = "0.16.0"
lazy_static = "1.4.0"

[features]
debug_trace_execution = []
